--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,9 @@
 <body>
   <div id="service1"></div>
   <div id="service2"></div>
-  <div id="service3"></div>
-  <!-- <div id="service4"></div> -->
+  <div id="app"></div>
   <script src="bundles/service1.js"></script>
   <script src="bundles/service2.js"></script>
   <script src="bundles/service3.js"></script>
-  <!-- <script src="bundles/service4.js"></script> -->
 </body>
 </html>
