Added in buttons

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,16 @@
 </head>
 <body>
   <div id="service1"></div>
+  <div id="reviewsAndQA" style="width: 100%; border: 1px solid #e0e0e0; display: flex; justify-content: space-around;" >
+    <div id="reviews" style="text-align: center; width: 100%; display: block; padding: 20px; border-top: 5px solid black; border-right: 1px solid  #e0e0e0;">
+    <img src="https://tripreviews.s3-us-west-1.amazonaws.com/edit.png" style="width: 28px; height: 28px;"/>
+    <h2 style="font-family: arial;">Reviews</h2>
+    </div>
+    <div id="qa" style="text-align: center; width: 100%; display: block; padding: 20px;" >
+    <img src="https://tripreviews.s3-us-west-1.amazonaws.com/chat.png" style="width: 32px; height: 32px;" />
+    <h2 style="font-family: arial;">Q & A</h2>
+    </div>
+  </div>
   <div id="service2"></div>
   <div id="app"></div>
   <script src="bundles/service1.js"></script>
